Integrate KeyCloak Authen

--- a/service_catalogue/src/main/resources/application.yml
+++ b/service_catalogue/src/main/resources/application.yml
@@ -18,3 +18,10 @@ spring:
       port: 8500
       discovery:
         prefer-ip-address: true
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8000/auth/realms/clickCollect
+  main:
+    allow-bean-definition-overriding: true
