--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,25 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
+      - MYSQL_USER= $MYSQLDB_USER
     ports:
       - ${MYSQLDB_LOCAL_PORT}:$MYSQLDB_DOCKER_PORT
     volumes:
       - db:/var/lib/mysql
+
+  keycloak:
+    image: jboss/keycloak:16.1.1
+    env_file: ./.env
+    volumes:
+      - ./imports:/opt/jboss/keycloak/imports
+    command:
+      - "-b 0.0.0.0 -Dkeycloak.import=/opt/jboss/keycloak/imports/realm-export.json"
+    environment:
+      KEYCLOAK_IMPORT: /opt/jboss/keycloak/imports/realm-export.json -Dkeycloak.profile.feature.upload_scripts=enabled
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: admin
+    ports:
+      - 8000:8080
 
   consul:
     image: consul:1.6.3
@@ -21,15 +36,26 @@ services:
       - "8600:8600/udp"
     networks:
       - consul-net
+
   app:
     depends_on:
       - mysqldb
       - consul
+      - keycloak
     build: ./service_catalogue
     restart: on-failure
     env_file: ./.env
     ports:
       - ${SPRING_LOCAL_PORT}:$SPRING_DOCKER_PORT
+    environment:
+      SPRING_APPLICATION_JSON: '{
+            "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+            "spring.datasource.username" : "$MYSQLDB_USER",
+            "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+            "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+            "spring.jpa.hibernate.ddl-auto" : "update",
+            "spring.jpa.show-sql" : "true"
+          }'
     volumes:
       - .m2:/root/.m2
     stdin_open: true
