--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,16 +37,26 @@ services:
     networks:
       - consul-net
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    restart: always
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+
+
   app:
     depends_on:
       - mysqldb
       - consul
       - keycloak
+      - rabbitmq
     build: ./service_catalogue
     restart: on-failure
     env_file: ./.env
-    ports:
-      - ${SPRING_LOCAL_PORT}:$SPRING_DOCKER_PORT
+    #ports:
+     # - ${SPRING_LOCAL_PORT}:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
             "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
