--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,14 +28,10 @@ services:
     ports:
       - 8000:8080
 
-  consul:
+  discovery:
     image: consul:1.6.3
-    command: agent -server -ui -node=server1 -bootstrap-expect=1 -client=0.0.0.0
     ports:
-      - "8500:8500"
-      - "8600:8600/udp"
-    networks:
-      - consul-net
+      - 8500:8500
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -49,23 +45,14 @@ services:
   app:
     depends_on:
       - mysqldb
-      - consul
+      - discovery
       - keycloak
       - rabbitmq
     build: ./service_catalogue
     restart: on-failure
     env_file: ./.env
-    #ports:
-     # - ${SPRING_LOCAL_PORT}:$SPRING_DOCKER_PORT
     environment:
-      SPRING_APPLICATION_JSON: '{
-            "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-            "spring.datasource.username" : "$MYSQLDB_USER",
-            "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
-            "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-            "spring.jpa.hibernate.ddl-auto" : "update",
-            "spring.jpa.show-sql" : "true"
-          }'
+      - JAVA_TOOL_OPTIONS= -DRABBITMQ_HOST=rabbitmq -DCONSUL_HOST=discovery -DCONSUL_PORT=8500
     volumes:
       - .m2:/root/.m2
     stdin_open: true
@@ -73,6 +60,3 @@ services:
 
 volumes:
   db:
-networks:
-  consul-net:
-    driver: bridge
