--- a/service_catalogue/Dockerfile
+++ b/service_catalogue/Dockerfile
@@ -1,5 +1,5 @@
 FROM maven:3.8.2-jdk-11
-WORKDIR /service_catalogue
-COPY . .
-RUN mvn clean install
-CMD mvn spring-boot:run
+COPY target/servicecatalogue-0.0.1-SNAPSHOT.jar servicecatalogue-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","/servicecatalogue-0.0.1-SNAPSHOT.jar"]
+#RUN mvn clean install
+#CMD mvn spring-boot:run
