--- a/service_catalogue/src/main/resources/application.yml
+++ b/service_catalogue/src/main/resources/application.yml
@@ -8,13 +8,13 @@ spring:
     url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3307}/catalogue?useSSL=false
     username: root
     password: root
-    jpa:
-      hibernate.ddl-auto: update
-      generate-ddl: true
-      show-sql: true
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  jpa:
+    hibernate.ddl-auto: create
+    generate-ddl: true
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
   cloud:
     consul:
